--- a/cv.tex
+++ b/cv.tex
@@ -2,7 +2,8 @@
 %______________________________________________________________________________________________________________________
 % @brief    LaTeX2e Resume for Andrew T. Tredennick
 \documentclass[margin,line]{resume}
-
+\usepackage{url}
+\pagestyle{plain}
 \newcommand{\Cyclus}{\textsc{Cyclus }}
 
 %______________________________________________________________________________________________________________________
@@ -46,16 +47,16 @@
 		\textsl{Graduate Research Fellow}\vspace{.5mm}\\ 
     \textbf{Colorado State University, Natural Resource Ecology Lab}, Ft. Collins, CO \hfill \textbf{2009 -- 2011}\\
 		\textsl{Graduate Research Assistant}\vspace{.5mm}\\ 
-     \textbf{USFS Rocky Mountain Research Station}, Ft. Collins, CO \hfill \textbf{2009}\\
+     \textbf{US Forest Service Rocky Mountain Research Station}, Ft. Collins, CO \hfill \textbf{2009}\\
 		\textsl{Research Assistant}\vspace{.5mm}\\ 		
-     \textbf{Colorado State University, FRWS}, Ft. Collins, CO \hfill \textbf{2008}\\
+     \textbf{Colorado State University}, Ft. Collins, CO \hfill \textbf{2008}\\
 		\textsl{Graduate Teaching Assistant}\\ 
 
     %__________________________________________________________________________________________________________________
     % Honors and Awards
     \section{\mysidestyle Fellowships \\and Awards} 
-                NSF Postdoctoral Research Fellowship in Biology    \hfill \textbf{2014}\vspace{.5mm}\\%
-                1\textsuperscript{st} Place Oral Presentation, Front Range Student Ecology Symp.  \hfill \textbf{2013}\vspace{.5mm}\\%
+                NSF Postdoctoral Research Fellowship in Biology and Mathematics    \hfill \textbf{2014}\vspace{.5mm}\\%
+                1\textsuperscript{st} Place Oral Presentation, Front Range Student Ecology Symposium  \hfill \textbf{2013}\vspace{.5mm}\\%
                 NSF FORECAST Research Coordination Network Travel Award \hfill \textbf{2012}\vspace{.5mm}\\%
                 Sustainability Leadership Fellow, School of Global Environmental Sustainability, CSU \hfill \textbf{2012}\vspace{.5mm}\\%
 		NASA Earth and Space Science Graduate Fellowship  \hfill \textbf{2011}\vspace{.5mm}\\%
@@ -68,21 +69,21 @@
         \textbf{Tredennick, A.T.}, Karembe, M., Dembele, F., Dohn, J., and Hanan, N.P. In Review. Weak effects of fire, large herbivores, and their interaction on regrowth of harvested trees in two West African savannas. (preprint: )
         
     \section{\mysidestyle Publications\\ \textsl{\footnotesize in press}\\ \textsl{\footnotesize and published}}     
-     	\textbf{Tredennick, A.T.}, Hanan, N.P. in press. Effects of tree harvest on the stable-state dynamics of savanna and forest. \textsl{American Naturalist} (open access) \vspace{-6mm} \\%
+     	\textbf{Tredennick, A.T.}, Hanan, N.P. In Press. Effects of tree harvest on the stable-state dynamics of savanna and forest. \textsl{American Naturalist} (open access) \vspace{-6mm} \\%
 	
-	Hanan, N. P., \textbf{Tredennick, A.T.}, Prihodko, L., Bucini, G., and Dohn, J.. 2014. Analysis of stable states in global savannas: Is the CART pulling the horse? 	\textsl{Global Ecology and Biogeography} (open access)\vspace{-6mm}\\%
+	Hanan, N. P., \textbf{Tredennick, A.T.}, Prihodko, L., Bucini, G., and Dohn, J.. 2014. Analysis of stable states in global savannas: Is the CART pulling the horse? 	\textsl{Global Ecology and Biogeography} 23(3):259-263 (open access: http://dx.doi.org/10.1111/geb.12122) \vspace{-6mm}\\%
 	
-	\textbf{Tredennick, A. T.}, L. P. Bentley, and N. P. Hanan. 2013. Allometric convergence in savanna trees and implications for the use of plant scaling models in 	variable ecosystems. \textsl{PLoS One} 8(3):e58241 (open access)\vspace{-6mm}\\%
+	\textbf{Tredennick, A. T.}, L. P. Bentley, and N. P. Hanan. 2013. Allometric convergence in savanna trees and implications for the use of plant scaling models in 	variable ecosystems. \textsl{PLoS One} 8(3):e58241 (open access: http://dx.doi.org/10.1371/journal.pone.0058241)\vspace{-6mm}\\%
 	
-	Rice, J., \textbf{Tredennick, A.T.}, and Joyce, L.. 2011. The climate of the Shoshone National Forest: A synthesis of past changes, future projections, and 			ecosystem implications. USDA National Forest Service General Technical Report 264 \vspace{-6mm}\\%
+	Rice, J., \textbf{Tredennick, A.T.}, and Joyce, L.. 2011. The climate of the Shoshone National Forest: A synthesis of past changes, future projections, and 			ecosystem implications. USDA National Forest Service General Technical Report 264 (open access: http://www.treesearch.fs.fed.us/pubs/39736) \vspace{-6mm}\\%
 	
-	Sutton, A.E., Dohn, J., Loyd, K., \textbf{Tredennick, A.T.}, Bucini, G., Solï¿½rzano, A, Prihodko, L. and Hanan, N.P. 2010. Does warming increase the risk of civil war 	in Africa? \textsl{Proceedings of the National Academy of Sciences} 107(25):E102 (open access) %
+	Sutton, A.E., Dohn, J., Loyd, K., \textbf{Tredennick, A.T.}, Bucini, G., Solï¿½rzano, A, Prihodko, L. and Hanan, N.P. 2010. Letter: Does warming increase the risk of civil war 	in Africa? \textsl{Proceedings of the National Academy of Sciences} 107(25):E102 \\ (open access: http://www.pnas.org/content/107/25/E102.full) %
   
     \newpage
     %__________________________________________________________________________________________________________________
     % Funding
     \section{\mysidestyle Competitive\\Funding\\\textsl{\footnotesize External: \$297,000}\\\textsl{\footnotesize Internal: \$16,000}}
-    ``Diversity-stability relationships and coexistence: new theory and empirical tests", NSF Postdoctoral Research Fellowship in Biology, \$207,000 (2014-2017)\vspace{2mm}\\%
+    ``Diversity-stability Relationships and Coexistence: New Theory and Empirical Tests," NSF Postdoctoral Research Fellowship in Biology and Mathematics, \$207,000 (2014-2017)\vspace{2mm}\\%
     ``Effective Science Communication and Public Relations at NREL through EcoPress," Natural Resource Ecology Lab, \$6,000 (Co-I) (2013) \vspace{2mm}\\%
     ``NESSF: Fuelwood, Savannas, and Climate Change: Integrating Modeling, Field Experimentation, and Optical and Radar Remote Sensing," NASA, \$90,000 (2011-2014) \vspace{2mm}\\%
     ``Building a WCNR `Partnership for International Research and Education' in African Savannas: Undergraduate and Graduate Field-Based Education in Mali, West Africa," Warner College of Natural Resources, \$10,000 (PI--Hanan; collaborative proposal of the Hanan lab group) (2010)%
@@ -97,8 +98,13 @@
     %__________________________________________________________________________________________________________________
     % Teaching Experience
     \section{\mysidestyle Teaching\\Experience}
+    \textbf{Ecological Society of America Annual Meetings Workshop} \hfill \textbf{2013-2015}\\
+    		\textsl{Data Visualization in R}\\
+		Co-organizer and co-instructor (with Naupaka Zimmermann)\\
+		Materials: http://github.com/naupaka/esa\_data\_viz\_2014
+    
     \textbf{Colorado State University} \hfill \textbf{2013}\\
-               \textsl{Plant Ecology}\\
+               \textsl{Plant Ecology (undergraduate)}\\
                Guest Lecture on Tree-Grass Coexistence
                
     \textbf{Colorado State University} \hfill \textbf{2012}\\ 
@@ -106,11 +112,11 @@
                Data Analysis/Visualization Workshop Leader
                
     \textbf{Colorado State University} \hfill \textbf{2011}\\ 
-               \textsl{RS 351, Ecosystem Processes in a Changing World}\\
+               \textsl{RS 351, Ecosystem Processes in a Changing World (undergraduate)}\\
                Co-Instructor 
                
     \textbf{Colorado State University} \hfill \textbf{2009, 2010, 2012}\\ 
-               \textsl{RS 351, Wildland Ecosystems}\\
+               \textsl{RS 351, Wildland Ecosystems (undergraduate)}\\
                Guest Lecture on Ecosystem Modeling
                
     \textbf{Irish Elementary School} Ft. Collins, CO \hfill \textbf{2010-2011}\\ 
@@ -118,7 +124,7 @@
 		NSF GK-12 Fellow
 		
      \textbf{Colorado State University} \hfill \textbf{2008}\\ 
-               \textsl{RS 351, Wildland Ecosystems}\\
+               \textsl{RS 351, Wildland Ecosystems (undergraduate)}\\
                Graduate Teaching Assistant 
 
 %__________________________________________________________________________________________________________________
@@ -134,33 +140,48 @@
 	\textsl{Environmental Management};
 	\textsl{National Research Foundation, South Africa}
 	
-   \textbf{University Service and Public Outreach}\\
-   	Director of Social Media, \textsl{NREL EcoPress}\\
-	Student Review Committee, New Ecology Faculty Search, CSU\\
-	Organizing Committee, Global Savanna Workshop, CSU\\
-	Advertising and Outreach Committee, Front Range Student Ecology Symposium\\
-	Graduate Student Representative, Natural Resource Ecology Lab
-	
-  \newpage
-  
-    \textbf{Professional Society Membership}\\
+
+ \textbf{Professional Society Membership}\\
     	Ecological Society of America\\
 	American Society of Naturalists
-	
-    \textbf{Other Leadership Activities}\\
-    	Co-organizer, \textsl{Data Visualization in R}, ESA 2013 and 2014 Workshop
 
+  \newpage
+\section{\mysidestyle Professional\\Service\\ \textsl{\footnotesize continued}}
+   \textbf{University Service and Public Outreach}\\
+   	Director of Social Media, \textsl{NREL EcoPress}\footnote{http://nrelscience.org} (2012-2013)\\
+	Student Review Committee, New Ecology Faculty Search, CSU (2011)\\
+	Organizing Committee, Global Savanna Workshop, CSU (2009)\\
+	Advertising and Outreach Committee, Front Range Student Ecology Symposium (2010)\\
+	Graduate Student Representative, Natural Resource Ecology Lab (2010-2011)
+  
 %__________________________________________________________________________________________________________________
     % Presentations
-    \section{\mysidestyle Select\\Presentations}
-    ``Forecasting climate change impacts on plant population dynamics at large spatial extents: a test case with sagebrush (\emph{Artemisia}) species." 2014 Annual Meetings of the Ecological Society of America.\vspace{-6mm}\\%
+    \section{\mysidestyle Select\\Presentations\\ \textsl{\footnotesize First-author only}}
+    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2014) ``Africa's Fuelwood Footprint and the Biome-Level Impacts of Tree Harvest,'' Station d'Ecologie Expérimentale du CNRS, Moulis, France. \vspace{-6mm}\\% 
     
-    ``The sustainability and biome-level impacts of fuelwood harvesting in sub-Saharan Africa.'' Invited seminar, Geospatial Science Center of Excellence, South Dakota State University.\vspace{-6mm}\\%
+    Tredennick, A.T., Adler, P.B., Aldridge, C.L., Homer C.G., Iles, D.T., Kleinhesselink, A., LaMalfa, E., and Mann, R. (2014) ``Forecasting climate change impacts on plant population dynamics at large spatial extents: a test case with sagebrush (\emph{Artemisia}) species.'' 2014 Annual Meetings of the Ecological Society of America.\vspace{-6mm}\\%
     
-    ``Tree harvest, fire, and drought can drive state transitions in savanna.'' 2013 Annual Meetings of the Ecological Society of America.\vspace{-6mm}\\%
+    Tredennick, A.T., Adler, P.B., Aldridge, C.L., Homer C.G., Iles, D.T., Kleinhesselink, A., LaMalfa, E., and Mann, R. (2013) ``Pixel-based modeling of population dynamics at large spatial extents,'' Climate Change in Sagebrush Steppe Working Group, Park City, UT. \vspace{-6mm}\\%
     
-    ``Using diverse multi-scale data to assess patterns and sustainability of fuelwood harvest in sub-Saharan Africa.'' 2012 NSF FORECAST RCN Meeting.\\
+    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2013) ``Sustainability and Biome-Level Impacts of Fuelwood Harvesting in sub-Saharan Africa,'' invited seminar, Geospatial Science Center of Excellence, South Dakota State University. \vspace{-6mm}\\%
     
+    Tredennick, A.T., and Hanan N.P. (2013) ``Tree harvest, fire, and drought can drive state transitions in savanna,'' 2013 Annual Meetings of the Ecological Society of America. \vspace{-6mm}\\%
+    
+    Tredennick, A.T., and Hanan N.P. (2013) ``The Theoretical and Integrative Effects of Tree Harvest and Fire on Grassland-Savanna-Forest Transitions,'' Front Range Student Ecology Symposium, Colorado State University. \textsl{Awarded 1\textsuperscript{st} Place Oral Presentation}. \vspace{-6mm}\\%
+    
+    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2012) ``Using Diverse Multi-Scale Data to Assess Patterns and Sustainability of Fuelwood Harvest in Sub-Saharan Africa,'' poster presentation, NSF FORECAST RCN Meeting, Woods Hole, MA. \vspace{-6mm}\\%
+    
+    Tredennick, A.T., Bentley, L.P., and Hanan, N.P. (2012) ``Whole-tree and branch-level scaling in savannas: testing Metabolic Scaling Theory in a non-ideal system,'' Ecological Society of America Annual Meeting, Portland, OR. \vspace{-6mm}\\%
+    
+    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2012) ``Patterns and sustainability of fuelwood supply and demand in Sub-Saharan Africa,'' 10th Annual Savanna Science Network Meeting, Kruger National Park, South Africa.\vspace{-6mm}\\%
+    
+    Tredennick, A.T., Hanan, N.P., and Bentley, L.P. (2012) ``Scaling the savannas: Does Metabolic Scaling Theory apply in savannas?,'' Poster Presentation, 10th Annual Savanna Science Network Meeting, Kruger National Park, South Africa. \vspace{-6mm}\\%
+    
+    Tredennick, A.T., Hanan, N.P., Bucini, G., Parton, W., and Keogh, C. (2011) ``Spatially Quantifying Fuelwood Demand and Production in Sub-Saharan Africa,'' NREL Spring Seminar Series: New Voices in Ecology, Colorado State University.\vspace{-6mm}\\%
+    
+    Tredennick, A.T. and Hanan N.P. (2011) ``Allometric Scaling in Savannas: Do the Non-conformists Conform to Ecological Theory?,'' Front Range Student Ecology Symposium, Colorado State University. \textsl{Awarded 2\textsuperscript{st} Place Oral Presentation}.\vspace{-6mm}\\%
+  
+  Tredennick, A.T. and Coughenour, M.B. (2009) ``Economic Incentives for Conservation in Meru, Kenya,'' Poster Presentation, Front Range Student Ecology Symposium, Colorado State University.
 
 %______________________________________________________________________________________________________________________
 \end{resume}
