--- a/cv.tex
+++ b/cv.tex
@@ -75,6 +75,9 @@
     % Refereed Journal Publications
       \section{\textmd{\textsf{\color{MidnightBlue}{Publications}}}}
 	
+	   \textbf{Tredennick, A.T.}, M.B. Hooten,  and Adler, P. B. Do we need demographic data to forecast plant population dynamics? In press. \emph{Methods in Ecology and Evolution} \\ 
+        (preprint: \href{http://biorxiv.org/content/early/2015/08/30/025742}{http://biorxiv.org/content/early/2015/08/30/025742})
+	
 	  \textbf{Tredennick, A.T.}, M.B. Hooten, C.L. Aldridge, C., Homer, A.R. Kleinhesselink, and P.B. Adler. In press. Forecasting climate change impacts on plant populations over large spatial extents. \emph{Ecosphere}.
 	
 	\textbf{Tredennick, A.T.}, Adler, P.B., Grace, J.B., Harpole, W.S., Borer, E.T., Seabloom, E.W. and 36 co-authors. 2016. Comment on ``Worldwide evidence of a unimodal relationship between productivity and plant species richness". \textsl{Science} 35(6272):457a-457c. \vspace{-6mm}\\%
@@ -88,8 +91,6 @@
 	
 	Hanan, N. P., \textbf{Tredennick, A.T.}, Prihodko, L., Bucini, G., and Dohn, J.. 2014. Analysis of stable states in global savannas: Is the CART pulling the horse? 	\textsl{Global Ecology and Biogeography} 23(3):259-263 (open access: \href{http://dx.doi.org/10.1111/geb.12122}{http://dx.doi.org/10.1111/geb.12122}) \vspace{-6mm}\\%
 	
-	\newpage{}
-	
 	\textbf{Tredennick, A. T.}, L. P. Bentley, and N. P. Hanan. 2013. Allometric convergence in savanna trees and implications for the use of plant scaling models in 	variable ecosystems. \textsl{PLoS One} 8(3):e58241 (open access: \href{http://dx.doi.org/10.1371/journal.pone.0058241}{http://dx.doi.org/10.1371/journal.pone.0058241})\vspace{-6mm}\\%
 
    Rice, J., \textbf{Tredennick, A.T.}, and Joyce, L.. 2011. The climate of the Shoshone National Forest: A synthesis of past changes, future projections, and 			ecosystem implications. USDA National Forest Service General Technical Report 264 (open access: \href{http://www.treesearch.fs.fed.us/pubs/39736}{http://www.treesearch.fs.fed.us/pubs/39736}) \vspace{-6mm}\\%
@@ -99,9 +100,6 @@
 	\section{\textmd{\textsf{\color{MidnightBlue}{Publications \\ \footnotesize{in review}}}}}
 	%\section{\mysidestyle Publications\\ \textsl{\footnotesize in review}}
      \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. Environmental responses, not species interactions, determine species synchrony in natural plant communities. In review at \emph{Ecology}. (preprint: \href{http://biorxiv.org/content/early/2016/07/07/047480}{http://biorxiv.org/content/early/2016/07/07/047480})
-     
-        \textbf{Tredennick, A.T.}, M.B. Hooten,  and Adler, P. B. Do we need demographic data to forecast plant population dynamics? In review at \emph{Methods in Ecology and Evolution} \\ 
-        (preprint: \href{http://biorxiv.org/content/early/2015/08/30/025742}{http://biorxiv.org/content/early/2015/08/30/025742})
 	
 	\section{\textmd{\textsf{\color{MidnightBlue}{Manuscripts \\ \footnotesize{in preparation} \\ \footnotesize{(available upon request)}}}}}
 	 %\section{\mysidestyle Manuscripts\\ \textsl{\footnotesize in preparation}\\ \textsl{\footnotesize (available upon request)}}  
