--- a/cv.tex
+++ b/cv.tex
@@ -99,11 +99,11 @@
 		
 	\section{\textmd{\textsf{\color{MidnightBlue}{Publications \\ \footnotesize{in review}}}}}
 	%\section{\mysidestyle Publications\\ \textsl{\footnotesize in review}}
-     \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. Environmental responses, not species interactions, determine species synchrony in natural plant communities. In review at \emph{Ecology}.
-     
-     \textbf{Tredennick, A.T.}, P.B. Adler, and F.R. Adler. The relationship between species richness and ecosystem variability is shaped by the mechanism of coexistence. In review at \emph{Ecology Letters}.
+	\textbf{Tredennick, A.T.}, P.B. Adler, and F.R. Adler. The relationship between species richness and ecosystem variability is shaped by the mechanism of coexistence. In review at \emph{Ecology Letters}.
 	
-	Kulmatiski, A., P.B. Adler, J.M. Stark, and \textbf{A.T. Tredennick}. Water and nitrogen uptake are better associated with resource availability than root biomass. In review at \emph{Nature Ecology and Evolution}.
+     \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. Environmental responses, not species interactions, determine species synchrony in natural plant communities. In review at \emph{Ecology}.
+	
+	Kulmatiski, A., P.B. Adler, J.M. Stark, and \textbf{A.T. Tredennick}. Water and nitrogen uptake are better associated with resource availability than root biomass. In review at \emph{Ecology}.
 	
 	\section{\textmd{\textsf{\color{MidnightBlue}{Manuscripts \\ \footnotesize{in preparation} \\ \footnotesize{(available upon request)}}}}}
 	 %\section{\mysidestyle Manuscripts\\ \textsl{\footnotesize in preparation}\\ \textsl{\footnotesize (available upon request)}}  
