--- a/cv.tex
+++ b/cv.tex
@@ -81,7 +81,7 @@
 	
 	\textbf{Tredennick, A.T.}, P.B. Adler, J.B. Grace, W.S. Harpole, E.T. Borer, E.W. Seabloom, and 36 co-authors. (2016). Comment on ``Worldwide evidence of a unimodal relationship between productivity and plant species richness". \textsl{Science} 35(6272):457a-457c. \vspace{-6mm}\\%
 	
-	\textbf{Tredennick, A.T.}, M. Karemb\'{e}, F. Demb\'{e}l\'{e}, J. Dohn, and N.P Hanan. No effects of fire, large herbivores, and their interaction on regrowth of harvested trees in two West African savannas. \textsl{African Journal of Ecology} 53(4):487-495. \vspace{-6mm}\\%
+	\textbf{Tredennick, A.T.}, M. Karemb\'{e}, F. Demb\'{e}l\'{e}, J. Dohn, and N.P Hanan. (2015). No effects of fire, large herbivores, and their interaction on regrowth of harvested trees in two West African savannas. \textsl{African Journal of Ecology} 53(4):487-495. \vspace{-6mm}\\%
 	
 	Hanan, N. P., \textbf{A.T. Tredennick}, L. Prihodko, G. Bucini, and J. Dohn. (2015). Analysis of stable states in global savannas -- a response to Staver and Hansen. 	\textsl{Global Ecology and Biogeography} 24(8):988-989. \vspace{-6mm}\\%
    
