--- a/cv.tex
+++ b/cv.tex
@@ -74,6 +74,8 @@
    %__________________________________________________________________________________________________________________
     % Refereed Journal Publications
       \section{\textmd{\textsf{\color{MidnightBlue}{Publications}}}}
+      
+      \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. (In press). Environmental responses, not species interactions, determine species synchrony in natural plant communities. \emph{Ecology}.
 	
 	  \textbf{Tredennick, A.T.}, M.B. Hooten,  and P.B. Adler. (2016). Do we need demographic data to forecast plant population dynamics? \emph{Methods in Ecology and Evolution}, Early View (online).
 	
@@ -100,8 +102,6 @@
 	\section{\textmd{\textsf{\color{MidnightBlue}{Publications \\ \footnotesize{in review}}}}}
 	%\section{\mysidestyle Publications\\ \textsl{\footnotesize in review}}
 	\textbf{Tredennick, A.T.}, P.B. Adler, and F.R. Adler. The relationship between species richness and ecosystem variability is shaped by the mechanism of coexistence. In review at \emph{Ecology Letters}.
-	
-     \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. Environmental responses, not species interactions, determine species synchrony in natural plant communities. In review at \emph{Ecology}.
 	
 	Kulmatiski, A., P.B. Adler, J.M. Stark, and \textbf{A.T. Tredennick}. Water and nitrogen uptake are better associated with resource availability than root biomass. In review at \emph{Ecology}.
 	
