--- a/cv.tex
+++ b/cv.tex
@@ -75,6 +75,8 @@
     % Refereed Journal Publications
       \section{\textmd{\textsf{\color{MidnightBlue}{Publications}}}}
       
+      Kulmatiski, A., P.B. Adler, J.M. Stark, and \textbf{A.T. Tredennick}. (In press). Water and nitrogen uptake are better associated with resource availability than root biomass. \emph{Ecosphere}.
+      
       \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. (In press). Environmental responses, not species interactions, determine synchrony of dominant species in semiarid grasslands. \emph{Ecology}.
 	
 	  \textbf{Tredennick, A.T.}, M.B. Hooten,  and P.B. Adler. (2016). Do we need demographic data to forecast plant population dynamics? \emph{Methods in Ecology and Evolution}, Early View (online).
@@ -85,9 +87,9 @@
 	
 	\textbf{Tredennick, A.T.}, M. Karemb\'{e}, F. Demb\'{e}l\'{e}, J. Dohn, and N.P Hanan. (2015). No effects of fire, large herbivores, and their interaction on regrowth of harvested trees in two West African savannas. \textsl{African Journal of Ecology} 53(4):487-495. \vspace{-6mm}\\%
 	
-	Hanan, N. P., \textbf{A.T. Tredennick}, L. Prihodko, G. Bucini, and J. Dohn. (2015). Analysis of stable states in global savannas -- a response to Staver and Hansen. 	\textsl{Global Ecology and Biogeography} 24(8):988-989. \vspace{-6mm}\\%
+			\newpage{}
 	
-		\newpage{}
+	Hanan, N. P., \textbf{A.T. Tredennick}, L. Prihodko, G. Bucini, and J. Dohn. (2015). Analysis of stable states in global savannas -- a response to Staver and Hansen. 	\textsl{Global Ecology and Biogeography} 24(8):988-989. \vspace{-6mm}\\%
    
      	\textbf{Tredennick, A.T.} and N.P. Hanan. (2015). Effects of tree harvest on the stable-state dynamics of savanna and forest. \textsl{The American Naturalist} 5(185):E153-E165. \vspace{-6mm} \\%
 	
@@ -102,8 +104,6 @@
 	\section{\textmd{\textsf{\color{MidnightBlue}{Publications \\ \footnotesize{in review}}}}}
 	%\section{\mysidestyle Publications\\ \textsl{\footnotesize in review}}
 	\textbf{Tredennick, A.T.}, P.B. Adler, and F.R. Adler. The relationship between species richness and ecosystem variability is shaped by the mechanism of coexistence. In review at \emph{Ecology Letters}.
-	
-	Kulmatiski, A., P.B. Adler, J.M. Stark, and \textbf{A.T. Tredennick}. Water and nitrogen uptake are better associated with resource availability than root biomass. In review at \emph{Ecology}.
 	
 	\section{\textmd{\textsf{\color{MidnightBlue}{Manuscripts \\ \footnotesize{in preparation} \\ \footnotesize{(available upon request)}}}}}
 	 %\section{\mysidestyle Manuscripts\\ \textsl{\footnotesize in preparation}\\ \textsl{\footnotesize (available upon request)}}  
